<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_popular"
        android:title="@string/popular"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_top_rated"
        android:title="@string/top_rated"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_upcoming"
        android:title="@string/upcoming"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_now_playing"
        android:title="@string/now_playing"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <item android:id="@+id/action_favorite"
        android:title="@string/favorite"
        android:orderInCategory="500"
        app:showAsAction="never" />
</menu>
